fix for wrapping options

--- a/app/assets/stylesheets/ctl_base_ui/forms.scss
+++ b/app/assets/stylesheets/ctl_base_ui/forms.scss
@@ -71,7 +71,7 @@ input[type='number'] {
     li {
       @include border-box;
       @include border-radius(3px);
-      height: 35px;
+      min-height: 35px;
       padding-top: 10px;
       position: relative;
       padding-left: 20px;
